@@ -1,3 +1,12 @@
+2002-06-20  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/Parameters.cs : GError handling overhaul
+	* generator/SymbolTable.cs : map GError to IntPtr
+	* glib/GException.cs : Refactor to use glue.
+	* glue/Makefile.am : add the error.c file.
+	* glue/error.c : glue for error message string access
+	* gtk/makefile.win32 : ref the gdk-imaging-sharp assembly
+
 2002-06-19  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/Parameters.cs : csc build error fixes
